--- a/package.json
+++ b/package.json
@@ -7,18 +7,31 @@
     "build": "next build",
     "start": "next start"
   },
+  "jest": {
+    "transform": {
+      "^.+\\.(ts|tsx|js|jsx)$": "ts-jest"
+    }
+  },
   "dependencies": {
+    "@babel/preset-typescript": "^7.16.7",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
+    "axios-mock-adapter": "^1.20.0",
+    "babel-jest": "^27.5.1",
     "next": "12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "ts-jest": "^27.1.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-flow": "^7.16.7",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
     "@types/react": "^18.0.5",
+    "jest": "^27.5.1",
     "typescript": "^4.6.3"
   }
 }
